= Jsus Changelog
== Version 0.3.5
Other changes:
* Fixed error reporting routine when package.json / .yml was missing.
* New compression methods: frontcompiler, closure, uglifier
  (besides the default yui) [Thanks to Pavel Evstigneev]

== Version 0.3.4
Middleware changes:
* support for /compressed/ path component, which acts like /require/, but
  compresses the result in the end.
* Cache result is now stored in subfolders of cache directory (easier to manage
  with nginx and alike)
* Improved error reporting (choice of one of multiple modes in middleware settings)

CLI changes:
* --no-cycle-search option for CLI to improve compilation times

Other changes:
* Compression routines moved out to Jsus::Util::Compressor class. For now, only
  yui-compressor method is available

== Version 0.3.3
* Unfortunate accident with rubygems

== Version 0.3.2
Middleware changes:
* Fixed minor problem with middleware when package name and source file tag
  are the same
* Settings are now shared between Jsus::Middleware and subclasses
* Middleware now also supports /include/ directive (generates includes file),
  like -g option of CLI utility
* Hack for cache output paths to be recognizable by nginx

CLI changes:
* --very-verbose mode, outputs tree of your packages, very useful when debugging
  missing dependencies.
* If you have circular dependencies in your code, jsus will detect them and issue
  a huge warning message (WIP)

Shared changes:
* Pool instantiation will now follow symlinks one level deep
* Somewhat easier on eyes murdoc template
* Pool instantiation now also accepts array of directories as its argument
* YARD docs are now the default docs choice

== Version 0.3.1
* Added wildcard support for Jsus::Middleware

== Version 0.3.0
* Added Jsus::Middleware for rack middleware stuff. Yay!

== Version 0.2.7
* Brushed up CLI code
* Added --watch option for cli (using fssm gem and fs backend for your operating system)